<resources>
    <string name="app_name">Expense History</string>
    <string name="add_item">Add Item</string>
    <string name="date_title">Date:</string>
    <string name="add_date">Add Date</string>
    <string name="description">Description :</string>
    <string name="total_price">Total Price</string>
    <string name="save">Save</string>
    <string name="category_title">Category:</string>
    <string name="delete">Delete\n</string>
    <string name="cancel">Cancel</string>
    <string name="delete_item">Are you sure you want to delete this item ?</string>
    <string name="confirm">confirm</string>
    <string name="confirm_update_exit">Are you sure you want to discard changes?</string>
    <string name="enter_description">Enter Description Here :</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="total_expense">"Total Expense: "</string>
    <string name="users">Users</string>
    <string name="categories">Categories</string>
    <string name="pdf">Export Pdf</string>
    <string name="is_description">Description Required</string>
    <string name="hello_blank_fragment" />
    <string name="name">Name:</string>
    <string name="root_category">Root Category:</string>
    <string name="category_name">Enter Category Name</string>
    <string name="root_user">Root User:</string>
    <string name="user">User</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="sub_users">"Sub Users: "</string>
    <string name="delete_root">This Item has Children. \nDeleting it will modify its child!\nAre you sure to delete it?</string>
    <string name="user_name">Enter User Name:</string>
    <string name="new_user">New User</string>
    <string name="enter_name">Enter Name</string>
    <string name="error_user_insert">Couldn\'t Add User</string>
    <string name="new_category">New Category</string>
    <string name="error_category_insert">Couldn\\\'t Add Category</string>
    <string name="add_user">Add User to this Category</string>
    <string name="bakup_restore">Backup / Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="clear">Clear</string>
</resources>