<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="com.hgtech.expensehistory.ui.fragment.settings.SettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingBottom="20dp">

    <include
        layout="@layout/layout_settings_top"
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_divider"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="18dp"
                android:paddingHorizontal="2dp"
                android:drawableEnd="@drawable/baseline_attachment_24"
                android:layout_marginTop="20dp"
                android:id="@+id/pdf"
                android:text="@string/pdf"
                android:textSize="16sp"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_divider"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="18dp"
                android:paddingHorizontal="2dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                android:layout_marginTop="20dp"
                android:id="@+id/userMenu"
                android:text="@string/users"
                android:textSize="16sp"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_divider"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="18dp"
                android:paddingHorizontal="2dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                android:layout_marginTop="20dp"
                android:id="@+id/categoryMenu"
                android:text="@string/categories"
                android:textSize="16sp"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_divider"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="18dp"
                android:paddingHorizontal="2dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                android:layout_marginTop="20dp"
                android:id="@+id/backupRestore"
                android:text="@string/bakup_restore"
                android:textSize="16sp"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>